k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dojosolutions
  namespace: dojosolutions
  labels:
    app: dojosolutions
spec:
  selector:
    app: dojosolutions
  ports:
    - name: http
      port: 80
      targetPort: 3000
