k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dojosolutions
  namespace: dojosolutions
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dojosolutions.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dojosolutions
                port:
                  number: 80
